# customer-support-agent

./: .gitignore  .gitignore copy  README.md  config.example.yaml  docker-compose.yml  main.py  pyproject.toml  xyz.py
agents/: base_agent.py  graph.py
agents/billing/: billing_agent.py  compaction.py  factory.py  prompt.py  promt.py
agents/billing/_tools/: billing_tools.py
agents/returns/: return_agent.py
agents/supervisor/: prompt.py  supervisor_agent.py
agents/troubleshoot/: prompt.py  troubleshoot.py  troubleshoot_agent.py
agents/troubleshoot/_tools/: troubleshoot_tools.py
agents/warranty/: warranty_agent.py
ai_processing/: compaction.py  conversation_helper.py  get_response.py  graph.py  human_input_node.py  llm_client.py  states.py
memory/: chat_manager.py  ingest_playbook.py  retriever.py  support_playbook.md
utils/: config_loader.py  logger.py
