[project]
name = "cs-multi-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "graphviz>=0.21",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.0",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.1",
    "openai>=2.6.1",
    "pillow>=12.0.0",
    "pymongo>=4.15.4",
    "pypdf>=6.4.0",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.16.1",
]
